tdf#156539 Draw the gradient with polypolygonal clip when using Skia

For some unkown reason, the previous "draw gradient with XOR, draw
polygon with N0, and draw gradient again with XOR" does not work
with Skia/Raster (at least on macOS). Fortunately, Skia supports
polypolygonal clipping so just clip and draw the gradient.

Change-Id: Id069160312a270096f5ec9c670615eb95ec6200b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157199
Tested-by: Jenkins
Reviewed-by: Patrick Luby <plubius@neooffice.org>
(cherry picked from commit b2b115447614f39ae190a7fa861722bbbfc1c84d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157127
(cherry picked from commit f662285f0ae6704b78311c997f31d2be74c3aab3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157128
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>